<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VaxMate</string>
    <string name="welcome_text">Benvenuto su</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Registrazione</string>
    <string name="text_or">OPPURE</string>
    <string name="btn_guest">Accedi come ospite</string>
    <string name="footer_text"><![CDATA[Continuando, accetti i <a href="https://resteghinicelestino.altervista.org/termini_servizio.html">Termini di Servizio</a> e la <a href="https://resteghinicelestino.altervista.org/privacy_policy.html">Privacy Policy</a> di VaxMate.]]></string>

    <string name="login_title">Accedi a VaxMate</string>
    <string name="login_subtitle">Piattaforma Clinica Integrata</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="hint_email">indirizzo@clinica.it</string>
    <string name="btn_login_text">Login</string>
    <string name="no_account_register">Non hai un account?</string>
    <string name="register_word">Registrati</string>

    <string name="label_first_name">Nome</string>
    <string name="label_last_name">Cognome</string>
    <string name="label_confirm_password">Conferma Password</string>
    <string name="register_title">Crea il tuo Account</string>
    <string name="register_subtitle">Unisciti alla piattaforma clinica integrata</string>
    <string name="label_full_name">Nome e Cognome</string>
    <string name="label_hospital">Ospedale di competenza</string>
    <string name="already_have_account">Hai già un account?</string>
    <string name="login_word">Accedi</string>

    <string name="first_subtitle">Terapia biologica</string>
    <string name="second_subtitle">Età</string>
    <string name="third_subtitle">Condizioni cliniche</string>
    <string name="first_label">Es: anti-TNF</string>
    <string name="second_label">Es: 65</string>
    <string name="third_label">Altre patologie: nessuna</string>
    <string name="button">Elabora</string>
    <string name="info_label">Stato Sistema</string>
    <string name="info_text">Il sistema è pronto per ricevere nuovi dati.</string>

    <string name="error_invalid_therapy">Terapia non riconosciuta</string>
    <string name="error_invalid_condition">Patologia non riconosciuta</string>

    <string name="error_empty">Campo obbligatorio</string>
    <string name="error_hospital">Seleziona un ospedale</string>
    <string name="error_email">Email non valida</string>
    <string name="error_len_psw">Minimo 6 caratteri</string>
    <string name="error_psw">Le password non coincidono</string>
    <string name="error_register">Errore di registrazione (Es. email già in uso)</string>
    <string name="complete_register">Registrazione Completata</string>
    <string name="complete_msg">Il tuo account medico è stato creato con successo.</string>
    <string name="complete_btn">Vai all\'App</string>

    <string name="error_email_psw">Email o password errati</string>

    <string name="db_error">Errore di connessione al database</string>
    <string name="loading_vaccines">Caricamento vaccini in corso, riprova tra un istante...</string>
    <string name="error_age">Inserisci l\'età</string>
    <string name="empty_result">Nessuno</string>

    <string name="welcome_base">Benvenuto, </string>
    <string name="guest_role"> Dottore</string>
    <string name="greeting_base">Buongiorno, </string>

    <string name="guest_subtitle">Consulta le linee guida e calcola le raccomandazioni.</string>
    <string name="doctor_subtitle">Pronto per registrare le somministrazioni di oggi.</string>

    <string-array name="terapie_array">
        <item>Nessuna</item>
        <item>Anti-TNF</item>
        <item>Corticosteroidi alto dosaggio</item>
        <item>Chemioterapia</item>
    </string-array>

    <string-array name="patologie_array">
        <item>Nessuna</item>
        <item>Diabete</item>
        <item>Cardiopatia cronica</item>
        <item>Asma cronica</item>
        <item>Gravidanza</item>
        <item>Immunodeficienza severa</item>
    </string-array>

    <string name="menu_logout">Esci</string>

    <string name="title_linee_guida">Linee Guida Cliniche</string>

    <string name="intro_titolo">Contesto Dermatologico</string>
    <string name="intro_testo">I pazienti in terapia biologica presentano una modulazione del sistema immunitario. Questa applicazione applica regole rigide basate su standard clinici per supportare il medico nella scelta dei vaccini.</string>

    <string name="criteri_titolo">Criteri di Classificazione</string>
    <string name="criteri_raccomandati"><b>Raccomandati:</b> Vaccini indicati per prevenire infezioni opportunistiche prima o durante la terapia (es. Antinfluenzale, Antipneumococcico).</string>
    <string name="criteri_controindicati"><b>Controindicati:</b> Vaccini vivi attenuati. Sono generalmente da evitare durante la terapia biologica attiva per il rischio di replicazione virale.</string>

    <string name="fonti_titolo">Fonti e Riferimenti Ufficiali</string>
    <string name="fonti_testo">• Raccomandazioni EULAR per la vaccinazione nelle malattie immuno-mediate\n• CDC Adult Immunization Schedule\n• Linee guida del Ministero della Salute</string>

    <string name="disclaimer_titolo">Disclaimer Medico</string>
    <string name="disclaimer_testo">Attenzione: questo software è un sistema di supporto decisionale a scopo didattico/informativo e non sostituisce in alcun modo il giudizio clinico finale del medico specialista.</string>

    <string name="title_inventory">Inventario Vaccini</string>
    <string name="guest_not_available_message">Funzione non disponibile per ospiti.</string>
    <string name="title_profile">Profilo</string>
    <string name="lb_medico">Medico Vaccinatore</string>
    <string name="lb_dati">Dati Personali</string>
    <string name="lb_nome_cognome">NOME E COGNOME</string>
    <string name="lb_contatti">Contatti</string>
    <string name="lb_email">EMAIL</string>
    <string name="lb_affiliazione">Affiliazione</string>
    <string name="lb_struttura">STRUTTURA</string>

    <string name="status_recommended">Raccomandato</string>
    <string name="status_possible">Possibile</string>
    <string name="status_contraindicated">Controindicato</string>
    <string name="not_specified">Non specificato</string>
    <string name="vaccine_type_placeholder">Tipo: %1$s</string>

    <string name="hospital_inventory_info">Sede: %1$s\nTotale dosi a magazzino: %2$d</string>
    <string name="error_vaccine_catalog">Errore nel caricamento del catalogo vaccini</string>
    <string name="error_inventory_not_found">Inventario non trovato nel database per questa struttura</string>
    <string name="error_doctor_data">Errore nel recupero dei dati del medico</string>

    <string name="doses_format">%1$d dosi</string>

</resources>