<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardRegister"
        style="@style/Widget.VaxMate.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_lg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvGoToLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/space_lg">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_vaxmate"
                app:shapeAppearanceOverlay="@style/CircleImage" />

            <TextView
                style="@style/TextAppearance.VaxMate.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_md"
                android:text="@string/register_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_lg"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.VaxMate.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/space_sm"
                    android:layout_marginTop="0dp"
                    android:hint="@string/label_first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstName"
                        style="@style/Widget.VaxMate.TextInputEditText"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.VaxMate.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/space_sm"
                    android:layout_marginTop="0dp"
                    android:hint="@string/label_last_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastName"
                        style="@style/Widget.VaxMate.TextInputEditText"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.VaxMate.TextInputLayout"
                android:hint="@string/label_email"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegisterEmail"
                    style="@style/Widget.VaxMate.TextInputEditText"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.VaxMate.TextInputLayout.Dropdown"
                android:hint="@string/label_hospital"
                app:startIconDrawable="@drawable/ic_hospital">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/etHospital"
                    style="@style/Widget.VaxMate.TextInputEditText"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.VaxMate.TextInputLayout"
                android:hint="@string/label_password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegisterPassword"
                    style="@style/Widget.VaxMate.TextInputEditText"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.VaxMate.TextInputLayout"
                android:hint="@string/label_confirm_password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/Widget.VaxMate.TextInputEditText"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDoRegister"
                style="@style/Widget.VaxMate.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/space_lg"
                android:text="@string/btn_register"
                app:icon="@drawable/icona_registrazione"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_button_padding" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvGoToLogin"
        style="@style/TextAppearance.VaxMate.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_lg"
        android:text="@string/already_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardRegister"
        android:layout_marginTop="@dimen/space_xl"/>

</androidx.constraintlayout.widget.ConstraintLayout>