<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:padding="@dimen/space_lg"
    tools:context=".LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnLanguage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/space_md"
        android:layout_marginEnd="@dimen/space_md"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_flag_en"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImage"
        app:strokeColor="@color/primary"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/logo_vaxmate"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextAppearance.VaxMate.Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:text="@string/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <TextView
        android:id="@+id/tvAppName"
        style="@style/TextAppearance.VaxMate.Display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.VaxMate.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_xxl"
        android:text="@string/btn_login"
        app:contentPaddingEnd="12dp"
        app:contentPaddingStart="12dp"
        app:icon="@drawable/icona_login"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_button_padding"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.VaxMate.Button.Outlined"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/btn_register"
        app:contentPaddingEnd="12dp"
        app:contentPaddingStart="12dp"
        app:icon="@drawable/icona_registrazione"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_button_padding"
        app:layout_constraintBottom_toTopOf="@id/dividerContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <LinearLayout
        android:id="@+id/dividerContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btnGuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegister">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/outline" />

        <TextView
            style="@style/TextAppearance.VaxMate.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_sm"
            android:text="@string/text_or"
            android:textColor="@color/outline" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/outline" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuest"
        style="@style/Widget.VaxMate.Button.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xl"
        android:text="@string/btn_guest"
        app:icon="@drawable/icona_ospite"
        app:iconPadding="@dimen/icon_button_padding"
        app:layout_constraintBottom_toTopOf="@id/tvFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerContainer"/>

    <TextView
        android:id="@+id/tvFooter"
        style="@style/TextAppearance.VaxMate.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xl"
        android:gravity="center"
        android:linksClickable="true"
        android:text="@string/footer_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGuest" />

</androidx.constraintlayout.widget.ConstraintLayout>